# xanthos

./: .gitattributes  .gitignore  .travis.yml  DISCLAIMER  LICENSE  MANIFEST.in  README.md  config_futu.ini  config_hist.ini  gcam_hydro.py  pyproject.toml  requirements.txt  setup.py  test.py  test_environment.py  travis_setup.py
.github/ISSUE_TEMPLATE/: extending-xanthos-issues.md
.github/workflows/: build.yml  test.yml
DataReader/: ConfigSettings.py  DataLoad.py  IniReader.py
DataWriter/: OUTWriter.py
Diagnostics/: Aggregation.py  Diagnostics.py  TimeSeries.py
Input/: ReadMe_Input_Data.txt
Input/Diagnostics/: UNH_GRDC_average_annual_1986_1995.nc  (+1 more)
Input/GriddedMaps/: BasinNames235.txt  (+3 more)
RunoffStreamGen/: Accessible.py  PETCalculation.py  RunoffGen.py  StreamRouting.py  __init__.py
Utils/: Logging.py  Math.py  NumpyParser.py
docs/: available_modules.md  calibration_tutorial.md  extend_components.md
example/: config_abcd.ini  config_futu.ini  config_hist.ini  example.py  hargreaves_abcd_mrtm.ini  hargreaves_abcd_mrtm_futu.ini  hargreaves_abcd_mrtm_hist.ini  hargreaves_abcd_simple_futu.ini  hargreaves_abcd_simple_hist.ini  hargreaves_gwam_mrtm_futu.ini  hargreaves_gwam_mrtm_hist.ini  hargreaves_hejazi_simple_futu.ini  hargreaves_hejazi_simple_hist.ini  none_abcd_mrtm.ini  pm_abcd_mrtm.ini  pm_abcd_mrtm_isimip_hist.ini
notebooks/: quick_starter.ipynb  run_calibration.ipynb  vic_wfdei_nobc_hist_nosoc_co2_qtot_basin_km3-per-mth_1971_2010.csv
xanthos/: __init__.py  components.py  configurations.py  gcam_hydro.py  install_supplement.py  model.py
(+191 files in other folders)
